--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
+head>
+    <!-- Auch das meta-Tag zum Zeichensatz wurde vereinfacht.-->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+     
+    <style>
+        * {
+            color: #999999;
+            font-size: 20px;
+            font-weight: 400;
+            box-sizing: border-box;
+            font-family: 'Monteserat', Arial, sans-serif;
+        }
+ 
+        header,
+        nav,
+        section,
+        aside,
+        footer {
+            text-align: center;
+            border-radius: 7px;
+            padding: 25px;
+            box-shadow: 0 5px 15px rgba(0,0,0,.08);
+        }
+ 
+        header {
+            width: 25%;
+            margin: 25px 25px 25px 25px;
+            display: inline-block;
+        }
+ 
+        nav {
+            width: calc(75% - 75px);
+            margin: 25px 25px 25px 0px;
+            float: right;
+        }
+ 
+        aside {
+            width: 25%;
+            float: left;
+            min-height: 517px;
+        }
+ 
+        section {
+            float: left;
+            width: calc(75% - 75px);
+            margin: 0 25px 25px 25px;
+        }
+ 
+        section header,
+        section article,
+        section footer {
+            width: 100%;
+            border-radius: 7px;
+            border: 1px solid #e5e5e5;
+            box-shadow: none;
+            margin: 25px 0px 0px 0px;
+            padding: 50px;
+        }
+ 
+        footer {
+            width: 96.5%;
+            margin: 25px 25px 0px 25px;
+            clear: both;
+        }
+    </style>
 </head>
 
 <body>
   <main>
-    <h1>Vanilla JavaScript App</h1>
+  <header>
+    header <!-- Logo/Website-Name am besten als eine h1 nutzen-->
+  </header>
+ 
+  <nav>
+    nav <!-- Menü am besten als eine ul einfügen -->
+  </nav>
+ 
+  <section>
+    section <!-- Ein Abschnitt der Website -->
+    <header>section header</header> <!-- Du Überschrift des Website-Abschnitts -->
+    <article>section article</article> <!-- Der Inhalt des Website-Abschnitts -->
+    <footer>section footer</footer> <!-- Der Schlussteil des Website-Abschnitts -->
+  </section>
+ 
+  <aside>
+    aside <!-- Eine Seitenleiste -->
+  </aside>
+ 
+  <footer>
+    footer <!-- Der Fußbereich -->
+  </footer>
   </main>
 </body>
 
