--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>W3.CSS Template</title>
+<title>Mivirex AG</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -13,10 +13,9 @@
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
 <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-<a href="#home" class="w3-bar-item w3-button"><b>BR</b> Architects</a>
+<a href="#home" class="w3-bar-item w3-button"></b><strong> Mivirex AG</strong></a>
 <!-- Float links to the right. Hide them on small screens -->
 <div class="w3-right w3-hide-small">
-<a href="#projects" class="w3-bar-item w3-button">Projects</a>
 <a href="#about" class="w3-bar-item w3-button">About</a>
 <a href="#contact" class="w3-bar-item w3-button">Contact</a>
 </div>
@@ -29,7 +28,7 @@
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
 <img class="w3-image" src="/w3images/architect.jpg" alt="Architecture" width="1500" height="800">
 <div class="w3-display-middle w3-margin-top w3-center">
-<h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BR</b></span> <span class="w3-hide-small w3-text-light-grey">Architects</span></h1>
+<h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>MIVIREX AG</b></span></h1>
 </div>
 </header>
 
@@ -40,77 +39,10 @@
 
 
 
-<!-- Project Section -->
-<div class="w3-container w3-padding-32" id="projects">
-<h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Projects</h3>
-</div>
-
-
-
-<div class="w3-row-padding">
-<div class="w3-col l3 m6 w3-margin-bottom">
-<div class="w3-display-container">
-<div class="w3-display-topleft w3-black w3-padding">Summer House</div>
-<img src="/w3images/house5.jpg" alt="House" style="width:100%">
-</div>
-</div>
-<div class="w3-col l3 m6 w3-margin-bottom">
-<div class="w3-display-container">
-<div class="w3-display-topleft w3-black w3-padding">Brick House</div>
-<img src="/w3images/house2.jpg" alt="House" style="width:100%">
-</div>
-</div>
-<div class="w3-col l3 m6 w3-margin-bottom">
-<div class="w3-display-container">
-<div class="w3-display-topleft w3-black w3-padding">Renovated</div>
-<img src="/w3images/house3.jpg" alt="House" style="width:100%">
-</div>
-</div>
-<div class="w3-col l3 m6 w3-margin-bottom">
-<div class="w3-display-container">
-<div class="w3-display-topleft w3-black w3-padding">Barn House</div>
-<img src="/w3images/house4.jpg" alt="House" style="width:100%">
-</div>
-</div>
-</div>
-
-
-
-<div class="w3-row-padding">
-<div class="w3-col l3 m6 w3-margin-bottom">
-<div class="w3-display-container">
-<div class="w3-display-topleft w3-black w3-padding">Summer House</div>
-<img src="/w3images/house2.jpg" alt="House" style="width:99%">
-</div>
-</div>
-<div class="w3-col l3 m6 w3-margin-bottom">
-<div class="w3-display-container">
-<div class="w3-display-topleft w3-black w3-padding">Brick House</div>
-<img src="/w3images/house5.jpg" alt="House" style="width:99%">
-</div>
-</div>
-<div class="w3-col l3 m6 w3-margin-bottom">
-<div class="w3-display-container">
-<div class="w3-display-topleft w3-black w3-padding">Renovated</div>
-<img src="/w3images/house4.jpg" alt="House" style="width:99%">
-</div>
-</div>
-<div class="w3-col l3 m6 w3-margin-bottom">
-<div class="w3-display-container">
-<div class="w3-display-topleft w3-black w3-padding">Barn House</div>
-<img src="/w3images/house3.jpg" alt="House" style="width:99%">
-</div>
-</div>
-</div>
-
-
-
 <!-- About Section -->
 <div class="w3-container w3-padding-32" id="about">
 <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-laboris nisi ut aliquip ex ea commodo consequat.
+<p>Herzlich Willkomen zu unsere Website!
 </p>
 </div>
 
@@ -118,32 +50,22 @@ laboris nisi ut aliquip ex ea commodo consequat.
 
 <div class="w3-row-padding w3-grayscale">
 <div class="w3-col l3 m6 w3-margin-bottom">
-<img src="/w3images/team2.jpg" alt="John" style="width:100%">
-<h3>John Doe</h3>
+<img src="https://p16-sign-sg.tiktokcdn.com/aweme/720x720/tos-alisg-avt-0068/c8fe17d6a588c99c23f1f7abe6917436.jpeg?x-expires=1653062400&x-signature=d2HWA3jdeWTg2KV6SGEA7EdWqoA%3D" alt="John" style="width:90%">
+<h3>Milan Tabacki</h3>
 <p class="w3-opacity">CEO & Founder</p>
-<p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-<p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+<p><button class="w3-button w3-light-blue w3-block">Contact</button></p>
 </div>
 <div class="w3-col l3 m6 w3-margin-bottom">
-<img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
-<h3>Jane Doe</h3>
-<p class="w3-opacity">Architect</p>
-<p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-<p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+<img src="https://i.pinimg.com/564x/00/66/0f/00660f73b9896fda29d67ceb9f32ae1f.jpg" alt="Jane" style="width:90%">
+<h3>Elmaz Rexhepi</h3>
+<p class="w3-opacity">CEO & Founder</p>
+<p><button class="w3-button w3-light-blue w3-block">Contact</button></p>
 </div>
 <div class="w3-col l3 m6 w3-margin-bottom">
-<img src="/w3images/team3.jpg" alt="Mike" style="width:100%">
-<h3>Mike Ross</h3>
-<p class="w3-opacity">Architect</p>
-<p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-<p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-</div>
-<div class="w3-col l3 m6 w3-margin-bottom">
-<img src="/w3images/team4.jpg" alt="Dan" style="width:100%">
-<h3>Dan Star</h3>
-<p class="w3-opacity">Architect</p>
-<p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-<p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+<img src="https://image.geo.de/30086896/t/Mz/v3/w1440/r1/-/einstein-gross-jpg--41890-.jpg" alt="Mike" style="width:90%">
+<h3>Kabilas Vivekananthan</h3>
+<p class="w3-opacity">CEO & Founder</p>
+<p><button class="w3-button w3-light-blue w3-block">Contact</button></p>
 </div>
 </div>
 
@@ -158,7 +80,7 @@ laboris nisi ut aliquip ex ea commodo consequat.
 <input class="w3-input w3-section w3-border" type="text" placeholder="Email" required name="Email">
 <input class="w3-input w3-section w3-border" type="text" placeholder="Subject" required name="Subject">
 <input class="w3-input w3-section w3-border" type="text" placeholder="Comment" required name="Comment">
-<button class="w3-button w3-black w3-section" type="submit">
+<button class="w3-button w3-white w3-section" type="submit">
 <i class="fa fa-paper-plane"></i> SEND MESSAGE
 </button>
 </form>
@@ -166,7 +88,7 @@ laboris nisi ut aliquip ex ea commodo consequat.
 
 <!-- Image of location/map -->
 <div class="w3-container">
-<img src="/w3images/map.jpg" class="w3-image" style="width:100%">
+<img src="https://nextgeneration.mysign.ch/upload/rm/u8nwesks55tsyxv-8.png?_=1610979423000" class="w3-image" style="width:75%">
 </div>
 
 
@@ -176,10 +98,13 @@ laboris nisi ut aliquip ex ea commodo consequat.
 
 
 
+<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="btn btn-primary">Click here for 50$</a>
+
+
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
-<p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+<p>Powered by <a href="https://www.bbcag.ch" title="Bbc AG" target="_blank" class="w3-hover-text-blue">Bbc AG</a></p>
 </footer>
 
 
