--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <meta charset="UTF-8">
 	<title>Hasbulla Fan Page | Home</title>
 		  <link rel="icon" type="image/x-icon" href="kabibabi/src/Download.png">
-<link rel="stylesheet" href="kabibabi/src/style.css">
-<link rel="stylesheet" href="kabibabi/src/all.css">
+<link rel="stylesheet" href="https://github.com/kabilovesmilan/kabibabi/blob/main/src/styles.css">
+<link rel="stylesheet" href="https://github.com/kabilovesmilan/kabibabi/blob/main/src/all.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="kabibabi/src/script.js"></script>
 <script src="https://kit.fontawesome.com/0dfdec2c7e.js"></script>
