--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,14 @@
 <html>
 <meta charset="UTF-8">
 	<title>Hasbulla Fan Page | Home</title>
-		  <link rel="icon" type="image/x-icon" href="kabibabi/src/Download.png">
-<link rel="stylesheet" href="kabibabi/src/styles.css">
-<link rel="stylesheet" href="kabibabi/src/all.css">
+		  <link rel="icon" type="image/x-icon" href="/img/Download.png">
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="all.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="kabibabi/src/script.js"></script>
+<script src="script.js"></script>
 <script src="https://kit.fontawesome.com/0dfdec2c7e.js"></script>
-<img class="logo" src="kabibabi/src/has.png">
-<img class="backguy" src="kabibabi/src/hasbz.png">
+<img class="logo" src="img/has.png">
+<img class="backguy" src="img/hasbz.png">
 
 
 	
